[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
name = "slcan-bridge"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
py32f0xx-hal = { version = "0.5.0", features = ["py32f030xx8", "defmt"], path = "../py32f0xx-hal" }
nb = "1"
heapless = "0.9.2"
embedded-hal = "1.0"
#embedded-hal-bus = { version = "0.2.0", default-features = false }
embedded-can = "0.4.1"
embedded-hal-nb = "1.0"
embedded-time = "0.12"
#embedded-io = "0.6.1"
#embedded-io-async = "0.6.0"
#slcan-parser = { git = "https://github.com/gpgreen/slcan-parser.git", branch = "main", version = "0.3.0", features = ["defmt"] }
slcan-parser = { path = "../slcan-parser", features = ["defmt"] }
mcp2517 = { version = "0.2.0", path = "../rt-mcp2517" }
#mcp25xx = { version = "0.2.0", features = ["mcp2515"] }
lilos = "1"
#futures = { version = "0.3", default-features = false }
bytes = { version = "1.6.0", default-features = false }

[patch.crates-io]
bytes = { git = "https://github.com/atlas-aero/rt-bytes.git", branch = "cfg_target_has_atomic_v1.6.0" }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
